# example

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.in  configure  configure.ac
contrib/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  hello.texi  version.texi
gnulib/lib/: Makefile.am  Makefile.in
gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
man/: Makefile.am  Makefile.in
po/: LINGUAS  Makevars  POTFILES.in  bg.po  ca.po  da.po  de.po  el.po  en@boldquot.po  en@quot.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hello.pot  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lv.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  rm.po  ro.po  ru.po  sk.po  (+9 more)
src/: Makefile.am  Makefile.in  hello.c
tests/: Makefile.am  Makefile.in
